# llm-inference-explorer

./: .gitignore  Makefile  README.md  compose.yml  pyproject.toml
app/: benchmark.py  ollama_client.py  streamlit_app.py
docs/: ollama-serve-log-flow.md
